# MaterialSolver

./: CMakeLists.txt  CompassSearch.cpp  CompassSearch.h  Database.cpp  Database.h  FixedThickness.cpp  FixedThickness.h  Material.h  MaterialSolver.cpp  MaterialSolver.h  Polynomial.h  Result.cpp  Result.h  main.cpp
function/: FixedThickness.cpp  FixedThickness.h  tpoint.h
math/: integrate.h
minimizer/: CompassSearch.h  ExhaustiveSearch.h
struct/: Polynomial.h  Result.cpp  Result.h  Step.h
test/: CMakeLists.txt  combinations.cpp  common.h  compass.cpp  exhaustive.cpp  polynomial.cpp
